--- a/chickens.css
+++ b/chickens.css
@@ -1,3 +1,48 @@
 a {
   color: brown;
 }
+
+.container {
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.container img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.container span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.container span:after {
+  content: "이사진은 구글에서 가져왔습니다";
+  position: absolute;
+  font-size: 25px;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.container:hover span {
+  padding-right: 400px;
+}
+
+.container:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.img1 {
+  display: block;
+  margin: 0px auto;
+}
